--- a/source/stylesheets/_variables.scss
+++ b/source/stylesheets/_variables.scss
@@ -1,61 +1,51 @@
-/*
-Copyright 2008-2013 Concur Technologies, Inc.
-
-Licensed under the Apache License, Version 2.0 (the "License"); you may
-not use this file except in compliance with the License. You may obtain
-a copy of the License at
-
-  http://www.apache.org/licenses/LICENSE-2.0
-
-Unless required by applicable law or agreed to in writing, software
-distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
-WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
-License for the specific language governing permissions and limitations
-under the License.
-*/
-
-
 ////////////////////////////////////////////////////////////////////////////////
 // CUSTOMIZE SLATE
 ////////////////////////////////////////////////////////////////////////////////
 // Use these settings to help adjust the appearance of Slate
 
+// ARGON COLOR PALETTE
+$argon-blue: #0098C4;
+$argon-green: #1CA658;
+$argon-lightgreen: #B9BF04;
+$argon-yellow: #F2CB05;
+$argon-white: #F3F7F9;
+$argon-black: #0D0D0D;
 
 // BACKGROUND COLORS
 ////////////////////
-$nav-bg: #2E3336 !default;
+$nav-bg: $argon-white !default;
 $examples-bg: #2E3336 !default;
 $code-bg: #1E2224 !default;
 $code-annotation-bg: #191D1F !default;
-$nav-subitem-bg: #1E2224 !default;
-$nav-active-bg: #0F75D4 !default;
-$nav-active-parent-bg: #1E2224 !default; // parent links of the current section
+$nav-subitem-bg: rgba(0, 0, 0, 0.05) !default;
+$nav-active-bg: rgba(0, 0, 0, 0.05) !default;
+$nav-active-parent-bg: rgba(0, 0, 0, 0.05) !default; // parent links of the current section
 $lang-select-border: #000 !default;
 $lang-select-bg: #1E2224 !default;
 $lang-select-active-bg: $examples-bg !default; // feel free to change this to blue or something
 $lang-select-pressed-bg: #111 !default; // color of language tab bg when mouse is pressed
-$main-bg: #F3F7F9 !default;
-$aside-notice-bg: #8fbcd4 !default;
-$aside-warning-bg: #c97a7e !default;
-$aside-success-bg: #6ac174 !default;
-$search-notice-bg: #c97a7e !default;
+$main-bg: $argon-white !default;
+$aside-notice-bg: lighten($argon-blue, 8) !default;
+$aside-warning-bg: #F2CB05 !default;
+$aside-success-bg: #1CA658 !default;
+$search-notice-bg: #B9BF04 !default;
 
 
 // TEXT COLORS
 ////////////////////
 $main-text: #333 !default; // main content text color
-$nav-text: #fff !default;
-$nav-active-text: #fff !default;
-$nav-active-parent-text: #fff !default; // parent links of the current section
-$lang-select-text: #fff !default; // color of unselected language tab text
-$lang-select-active-text: #fff !default; // color of selected language tab text
-$lang-select-pressed-text: #fff !default; // color of language tab text when mouse is pressed
+$nav-text: $argon-black !default;
+$nav-active-text: $argon-black !default;
+$nav-active-parent-text: $argon-black !default; // parent links of the current section
+$lang-select-text: $argon-white !default; // color of unselected language tab text
+$lang-select-active-text: $argon-white !default; // color of selected language tab text
+$lang-select-pressed-text: $argon-white !default; // color of language tab text when mouse is pressed
 
 
 // SIZES
 ////////////////////
 $nav-width: 230px !default; // width of the navbar
-$examples-width: 50% !default; // portion of the screen taken up by code examples
+$examples-width: 40% !default; // portion of the screen taken up by code examples
 $logo-margin: 20px !default; // margin below logo
 $main-padding: 28px !default; // padding to left and right of content & examples
 $nav-padding: 15px !default; // padding to left and right of navbar
@@ -98,6 +88,6 @@ $search-box-border-color: #666 !default;
 // These settings are probably best left alone.
 
 %break-words {
-    word-break: break-all;
-    hyphens: auto;
+  word-break: break-all;
+  hyphens: auto;
 }
